<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/report_content_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/iv_report_content_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:contentDescription="@string/no_image_avaliable"
            android:src="@drawable/ic_back_white_20dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/report_title"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/report_inapp"
                android:textSize="@dimen/_16sdp" />

            <com.material.widget.RadioButton
                android:id="@+id/rb_report_content_reson1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/report_reason_1"
                android:textColor="@color/text_color" />

            <com.material.widget.RadioButton
                android:id="@+id/rb_report_content_reson2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/report_reason_2"
                android:textColor="@color/text_color" />

            <com.material.widget.RadioButton
                android:id="@+id/rb_report_content_reson3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/report_reason_3"
                android:textColor="@color/text_color" />

            <com.material.widget.RadioButton
                android:id="@+id/rb_report_content_reson4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/report_reason_4"
                android:textColor="@color/text_color" />

            <com.material.widget.RadioButton
                android:id="@+id/rb_report_content_reson5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/report_reason_5"
                android:textColor="@color/text_color" />

            <com.material.widget.RadioButton
                android:id="@+id/rb_report_content_reson6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/report_reason_6"
                android:textColor="@color/text_color" />

            <com.material.widget.RadioButton
                android:id="@+id/rb_report_content_reson7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/report_reason_7"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/et_report_content_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/divider_light"
                android:gravity="top"
                android:hint="@string/enter_comment"
                android:lines="5"
                android:textSize="@dimen/_16sdp" />

            <com.material.widget.Button
                android:id="@+id/btn_report_content_report_now"
                style="@style/Material.Drawable.Ripple.Touch.Light"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#f84949"
                android:padding="@dimen/_5sdp"
                android:text="@string/report_now"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>