<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/checkin_location_confirm"
        android:textSize="@dimen/_16sdp"
        android:textStyle="italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_black_" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.material.widget.TextView
            android:id="@+id/btn_no"
            style="@style/Material.Drawable.Ripple.Wave"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/light_black_" />

        <com.material.widget.TextView
            android:id="@+id/btn_yes"
            style="@style/Material.Drawable.Ripple.Wave"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>