<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:contentDescription="@string/no_image_avaliable"
                android:src="@drawable/ic_back_white_20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.22" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forgot_your_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_22sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/reset_password_link"
                android:textSize="@dimen/_16sdp" />

            <com.material.widget.EditText
                android:id="@+id/et_email"
                style="@style/Material.Widget.EditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_grey_20dp"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_email_grey_20dp"
                android:gravity="center_vertical"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textSize="@dimen/_14sdp"
                app:et_dividerErrorColor="@color/error"
                app:et_supportMode="helper"
                app:et_supportTextErrorColor="@color/error"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:orientation="vertical">

            <com.material.widget.Button
                android:id="@+id/btn_send"
                style="@style/RaiseWaveColorButtonRippleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/send_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="normal"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>

    </LinearLayout>
</layout>