<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20sdp"
    android:orientation="vertical">


    <com.material.widget.EditText
        android:id="@+id/et_change_pass_old"
        style="@style/Material.Widget.EditText.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_password_grey_20dp"
        android:drawablePadding="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_password_grey_20dp"
        android:gravity="center_vertical"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:maxLength="50"
        android:maxLines="1"
        android:textSize="@dimen/_14sdp"
        app:et_dividerErrorColor="@color/error"
        app:et_supportMode="helper"
        app:et_supportTextErrorColor="@color/error" />

    <com.material.widget.EditText
        android:id="@+id/et_change_pass_new"
        style="@style/Material.Widget.EditText.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_password_grey_20dp"
        android:drawablePadding="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_password_grey_20dp"
        android:gravity="center_vertical"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLength="50"
        android:maxLines="1"
        android:textSize="@dimen/_14sdp"
        app:et_dividerErrorColor="@color/error"
        app:et_supportMode="helper"
        app:et_supportTextErrorColor="@color/error" />

    <com.material.widget.EditText
        android:id="@+id/et_change_pass_cnew"
        style="@style/Material.Widget.EditText.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_password_grey_20dp"
        android:drawablePadding="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_password_grey_20dp"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:maxLines="1"
        android:textSize="@dimen/_14sdp"
        app:et_dividerErrorColor="@color/error"
        app:et_supportMode="helper"
        app:et_supportTextErrorColor="@color/error" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center">

        <com.material.widget.Button
            android:id="@+id/btn_change_pass_change"
            style="@style/RaiseWaveColorButtonRippleStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

</LinearLayout>