<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="vertical">

        <com.material.widget.EditText
            android:id="@+id/et_title"
            style="@style/Material.Widget.EditText.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:textSize="@dimen/_14sdp"
            app:et_dividerErrorColor="@color/error"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="@color/error" />

        <com.material.widget.EditText
            android:id="@+id/et_desc"
            style="@style/Material.Widget.EditText.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:textSize="@dimen/_14sdp"
            app:et_dividerErrorColor="@color/error"
            app:et_supportMaxLines="10"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="@color/error" />

        <com.material.widget.Button
            android:id="@+id/btn_submit"
            style="@style/RaiseWaveColorButtonRippleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</layout>